--- a/index.html
+++ b/index.html
@@ -441,12 +441,17 @@
                         <ul>
                             <li>
                                 <a href="https://www.facebook.com/anasmk01">
-                                    <i class="fa fa-facebook-square" aria-hidden="true"></i> https://www.facebook.com/anasmk01
+                                    <i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/anasmk0313">
-                                    <i class="fa fa-linkedin-square" aria-hidden="true"></i> https://www.linkedin.com/in/anasmk0313
+                                    <i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/anasmk0313">
+                                    <i class="fa fa-github" aria-hidden="true"></i> GitHub
                                 </a>
                             </li>
                         </ul>
@@ -460,7 +465,7 @@
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/_anas_m_k">
-                                    <i class="fa fa-instagram" aria-hidden="true"></i> https://www.instagram.com/_anas_m_k
+                                    <i class="fa fa-instagram" aria-hidden="true"></i> Instagram
                                 </a>
                             </li>
                         </ul>
