--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </p>
                     </div>
                 </div>
-                <h3>Cirtifications</h3>
+                <h3>Certifications</h3>
                 <div class="education row">
                     <div class="col-md-4">
                         <h4>Red Team Hackers Academy</h4>
