--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="col-md-8">
                         <p>
-                            <strong>Cirtified Penetration Tester</strong>
+                            <strong>Certified Penetration Tester</strong>
                             <br>
                             <span class="location">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i> Red Team Hackers Academy
