--- a/index.html
+++ b/index.html
@@ -440,11 +440,6 @@
                     <div class="col-md-6">
                         <ul>
                             <li>
-                                <a href="https://www.facebook.com/anasmk01">
-                                    <i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook
-                                </a>
-                            </li>
-                            <li>
                                 <a href="https://www.linkedin.com/in/anasmk0313">
                                     <i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin
                                 </a>
@@ -454,6 +449,11 @@
                                     <i class="fa fa-github" aria-hidden="true"></i> GitHub
                                 </a>
                             </li>
+                            <li>
+                                <a href="tel:+918943427221">
+                                    <i class="fa fa-phone" aria-hidden="true"></i> Phone : +91 8943427221
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-md-6">
@@ -461,6 +461,11 @@
                             <li>
                                 <a href="mailto:anasmk0313@gmail.com">
                                     <i class="fa fa-envelope" aria-hidden="true"></i> anasmk0313@gmail.com
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/anasmk01">
+                                    <i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook
                                 </a>
                             </li>
                             <li>
