--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                             </li>
                             <li>
                                 <a href="tel:+918943427221">
-                                    <i class="fa fa-phone" aria-hidden="true"></i> Phone : +91 8943427221
+                                    <i class="fa fa-phone" aria-hidden="true"></i> +91 8943427221
                                 </a>
                             </li>
                         </ul>
