--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <h3>Details</h3>
                         <strong>Name : </strong><br> Anas M K
                         <br>
-                        <strong>DOB : </strong><br> 02/09/1996
+                        <strong>Age : </strong><br> <span id="age"></span> Years
                         <br>
                         <strong>Location : </strong><br> Muthukuzhiyil, Malayamma, NIT,<br> Kozhikode, Kerala, India, 673601
                     </div>
@@ -120,17 +120,14 @@
                 <h3>Achievements</h3>
                 <div class="education row">
                     <div class="col-md-12">
-                        <h4>Active Volunteer of National Service Scheme Technological Cell</h4>
-                        <p class="education-period">08/2015 - 07/2017</p>
+                        <h4><i class="fa fa-hand-o-right" aria-hidden="true"></i> Active Volunteer of National Service Scheme Technological Cell</h4>
+                        
                     </div>
                     <div class="col-md-12">
-                        <h4>Program Coordinator of DARPAN (College Tech Fest)</h4>
-                        <p>2018 - 2019</p>
+                        <h4><i class="fa fa-hand-o-right" aria-hidden="true"></i> Program Coordinator of DARPAN (College Tech Fest)</h4>
                     </div>
                     <div class="col-md-12">
-                        <h4>CTF Challenge</h4>
-                        <span style="font-style: italic;">First price won on a CTF challenge from Red Team Hackers Academy</span>
-                        <p>11/2019</p>
+                        <h4><i class="fa fa-hand-o-right" aria-hidden="true"></i> First Price Won on a Capture The Flag (CTF) Challenge</h4>
                     </div>
                 </div>
             </div>
