--- a/index.html
+++ b/index.html
@@ -426,6 +426,18 @@
                             </figcaption>
                         </figure>
                     </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <figure class="effect">
+                            <a href="https://anasmk0313.github.io/fishfarm/">
+                                <img src="images/white.jpg" alt="Water Valley Fish Farm">
+                            </a>
+                            <figcaption>
+                                <h3>Image Cropping</h3>
+                                <p>Automatic Image Cropping Using Machine Learning For Visual 
+                                Aesthetic Enhancement</p>
+                            </figcaption>
+                        </figure>
+                   </div>
                 </div>
             </div>
         </div>
