--- a/index.html
+++ b/index.html
@@ -428,9 +428,7 @@
                     </div>
                     <div class="col-md-6 col-sm-12 col-xs-12">
                         <figure class="effect">
-                            <a href="https://anasmk0313.github.io/fishfarm/">
-                                <img src="images/white.jpg" alt="Water Valley Fish Farm">
-                            </a>
+                                <img href="https://anasmk0313.github.io/fishfarm/" src="images/white.jpg" alt="Water Valley Fish Farm">
                             <figcaption>
                                 <h3>Image Cropping</h3>
                                 <p>Automatic Image Cropping Using Machine Learning For Visual 
