--- a/index.html
+++ b/index.html
@@ -117,6 +117,37 @@
                         </p>
                     </div>
                 </div>
+                <h3>Work Experience</h3>
+                <div class="education row">
+                    <div class="col-md-4">
+                        <h4>Coronata Creations Pvt Ltd.</h4>
+                        <p class="education-period">02/2020 - 09/2020</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Data Mining</strong>
+                            <br>
+                            <span class="location">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i> HiLite Business Park Kozhikode
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <div class="education row">
+                    <div class="col-md-4">
+                        <h4>Coronata Creations Pvt Ltd.</h4>
+                        <p class="education-period">09/2020 - On Going</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Backend Web Developer ( PHP Laravel Framework )</strong>
+                            <br>
+                            <span class="location">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i> HiLite Business Park Kozhikode
+                            </span>
+                        </p>
+                    </div>
+                </div>
                 <h3>Achievements</h3>
                 <div class="education row">
                     <div class="col-md-12">
