--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="ability-title">JavaScript</span>
+                                <span class="ability-title">Laravel Framework</span>
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
@@ -216,11 +216,11 @@
                     <div class="col-md-6">
                         <ul>
                             <li>
-                                <span class="ability-title">Laravel Framework</span>
+                                <span class="ability-title">React Js Framework</span>
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </span>
@@ -298,6 +298,16 @@
                             </li>
                             <li>
                                 <span class="ability-title">Android</span>
+                                <span class="ability-score">
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="ability-title">JavaScript</span>
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
