project and experience changes

--- a/index.html
+++ b/index.html
@@ -117,33 +117,51 @@
                         </p>
                     </div>
                 </div>
+                <div class="education row">
+                    <div class="col-md-4">
+                        <h4>Udemy</h4>
+                        <p class="education-period">11/2020 -</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Become a Full Stack Web Developer - Beginner To Advanced</strong>
+                            <br>
+                            <span class="location">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i> Online
+                            </span>
+                        </p>
+                        <a class="cirtificate" href="http:://ude.my/UC-21d3ff20-ac63-4d72-a7be-6ab27f6d90af">View Cirtificate</a>
+                    </div>
+                </div>
                 <h3>Work Experience</h3>
                 <div class="education row">
                     <div class="col-md-4">
                         <h4>Coronata Creations Pvt Ltd.</h4>
-                        <p class="education-period">02/2020 - 09/2020</p>
-                    </div>
-                    <div class="col-md-8">
-                        <p>
-                            <strong>Data Mining</strong>
-                            <br>
-                            <span class="location">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i> HiLite Business Park Kozhikode
-                            </span>
-                        </p>
-                    </div>
-                </div>
-                <div class="education row">
-                    <div class="col-md-4">
-                        <h4>Coronata Creations Pvt Ltd.</h4>
-                        <p class="education-period">09/2020 - On Going</p>
+                        <p class="education-period">02/2020 - 12/2020</p>
                     </div>
                     <div class="col-md-8">
                         <p>
                             <strong>Backend Web Developer ( PHP Laravel Framework )</strong>
                             <br>
                             <span class="location">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i> HiLite Business Park Kozhikode
+                                <i class="fa fa-map-marker" aria-hidden="true"></i> 5th Floor HiLite Business Park Kozhikode, Kerala,
+                                673016
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <div class="education row">
+                    <div class="col-md-4">
+                        <h4>Beacon Infotech</h4>
+                        <p class="education-period">01/2021 - On Going</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Backend Web Developer ( PHP Laravel Framework )</strong>
+                            <br>
+                            <span class="location">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i> 1st Floor, UL CyberPark Kozhikode, Kerala,
+                                673016
                             </span>
                         </p>
                     </div>
@@ -197,7 +215,7 @@
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </span>
                             </li>
@@ -206,7 +224,7 @@
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </span>
@@ -301,7 +319,7 @@
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </span>
@@ -449,7 +467,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12 col-xs-12">
                         <figure class="effect">
-                            <img src="images/white.jpg" alt="image cropping">
+                            <img src="images/image_crop.jpg" alt="image cropping">
                             <figcaption>
                                 <h3>Image Cropping</h3>
                                 <p>Automatic Image Cropping Using Machine Learning For Visual 
@@ -459,7 +477,7 @@
                     </div>
                     <div class="col-md-6 col-sm-12 col-xs-12">
                         <figure class="effect">
-                            <img src="images/white.jpg" alt="image cropping">
+                            <img src="images/ctf.png" alt="image cropping">
                             <figcaption>
                                 <h3>CTF Machine</h3>
                                 <p>Created an Ubuntu Machine For Capture The Flag (CTF) For The Purpose of 
