--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <i class="fa fa-map-marker" aria-hidden="true"></i> Online
                             </span>
                         </p>
-                        <a class="cirtificate" href="http:://ude.my/UC-21d3ff20-ac63-4d72-a7be-6ab27f6d90af">View Cirtificate</a>
+                        <!-- <a class="cirtificate" href="http:://ude.my/UC-21d3ff20-ac63-4d72-a7be-6ab27f6d90af">View Cirtificate</a> -->
                     </div>
                 </div>
                 <h3>Work Experience</h3>
