--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                         </p>
                     </div>
                 </div>
-                <h3>Achievements</h3>
+                <h3>Volunteering Experience & Achievements</h3>
                 <div class="education row">
                     <div class="col-md-12">
-                        <h4><i class="fa fa-hand-o-right" aria-hidden="true"></i> Active Volunteer of National Service Scheme Technological Cell</h4>
+                        <h4><i class="fa fa-hand-o-right" aria-hidden="true"></i> Active Volunteer of National Service Scheme Technical Cell</h4>
                         
                     </div>
                     <div class="col-md-12">
@@ -177,6 +177,9 @@
                     </div>
                     <div class="col-md-12">
                         <h4><i class="fa fa-hand-o-right" aria-hidden="true"></i> First Price Won on a Capture The Flag (CTF) Challenge</h4>
+                    </div>
+                    <div class="col-md-12">
+                        <h4><i class="fa fa-hand-o-right" aria-hidden="true"></i> Webcasting Volunteer in Kerala Legislative Assembly Election 2021</h4>
                     </div>
                 </div>
             </div>
@@ -234,7 +237,27 @@
                     <div class="col-md-6">
                         <ul>
                             <li>
-                                <span class="ability-title">React Js Framework</span>
+                                <span class="ability-title">React Js</span>
+                                <span class="ability-score">
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="ability-title">MySQL</span>
+                                <span class="ability-score">
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="ability-title">Docker</span>
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
@@ -253,16 +276,6 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </span>
                             </li>
-                            <li>
-                                <span class="ability-title">MySQL</span>
-                                <span class="ability-score">
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </span>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -271,39 +284,15 @@
                     <div class="col-md-6">
                         <ul>
                             <li>
-                                <span class="ability-title">C Programming</span>
-                                <span class="ability-score">
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </span>
-                            </li>
-                            <li>
-                                <span class="ability-title">Java</span>
-                                <span class="ability-score">
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
-                                </span>
-                            </li>
-                            <li>
                                 <span class="ability-title">PHP</span>
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
-                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </span>
                             </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <ul>
                             <li>
                                 <span class="ability-title">Python</span>
                                 <span class="ability-score">
@@ -315,7 +304,21 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="ability-title">Android</span>
+                                <span class="ability-title">JavaScript</span>
+                                <span class="ability-score">
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <ul>
+                            <li>
+                                <span class="ability-title">C Programming</span>
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
@@ -325,11 +328,21 @@
                                 </span>
                             </li>
                             <li>
-                                <span class="ability-title">JavaScript</span>
+                                <span class="ability-title">Java</span>
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="ability-title">Android</span>
+                                <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </span>
@@ -447,6 +460,16 @@
                             </li>
                             <li>
                                 <span class="ability-title">VS Code</span>
+                                <span class="ability-score">
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star filled" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="ability-title">Adobe XD</span>
                                 <span class="ability-score">
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
                                     <i class="fa fa-star filled" aria-hidden="true"></i>
