change experiance for prompttech

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="education row">
                     <div class="col-md-4">
                         <h4>Beacon Infotech</h4>
-                        <p class="education-period">01/2021 - On Going</p>
+                        <p class="education-period">01/2021 - 07/2021</p>
                     </div>
                     <div class="col-md-8">
                         <p>
@@ -162,6 +162,38 @@
                             <span class="location">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i> 1st Floor, UL CyberPark Kozhikode, Kerala,
                                 673016
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <div class="education row">
+                    <div class="col-md-4">
+                        <h4>PromptTech Solutions</h4>
+                        <p class="education-period">07/2021 - 12/2021</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Full Stack Developer ( PHP Laravel Framework, React JS ), Team Lead</strong>
+                            <br>
+                            <span class="location">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i> 3rd Floor, Nila Building, Technopark, Trivandrum,
+                                695581
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <div class="education row">
+                    <div class="col-md-4">
+                        <h4>PromptTech Solutions</h4>
+                        <p class="education-period">01/2022 - On Going</p>
+                    </div>
+                    <div class="col-md-8">
+                        <p>
+                            <strong>Full Stack Developer ( PHP Laravel Framework, React JS ), Project Manager</strong>
+                            <br>
+                            <span class="location">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i> 3rd Floor, Nila Building, Technopark, Trivandrum,
+                                695581
                             </span>
                         </p>
                     </div>
