--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12 col-xs-12">
                         <figure class="effect">
-                            <img src="images/image_crop.jpg" alt="image cropping">
+                            <img src="images/image_crop.jpg" alt="image cropping" style="height: 370px;">
                             <figcaption>
                                 <h3>Image Cropping</h3>
                                 <p>Automatic Image Cropping Using Machine Learning For Visual 
@@ -532,11 +532,47 @@
                     </div>
                     <div class="col-md-6 col-sm-12 col-xs-12">
                         <figure class="effect">
-                            <img src="images/ctf.png" alt="image cropping">
+                            <img src="images/ctf.png" alt="image cropping" style="height: 370px;">
                             <figcaption>
                                 <h3>CTF Machine</h3>
                                 <p>Created an Ubuntu Machine For Capture The Flag (CTF) For The Purpose of 
                                     Penetration Testing </p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <figure class="effect">
+                            <img src="images/salkaaram.png" alt="image salkaaram" style="height: 370px;">
+                            <figcaption>
+                                <h3>Salkaaram</h3>
+                                <p>API and Admin panel developed in php laravel , Database designing in MySQL for a Preorder Food delivery application for bulk quantity food from different chefs. The System has mainly 3 mobile applications (Customer, Chef, Delivery boy) and 1 Admin panel, developed with a team of 5 members. </p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <figure class="effect">
+                            <img src="images/aliainsurance.png" alt="image aliainsurance" style="height: 370px;">
+                            <figcaption>
+                                <h3>Alia Insurance Broker</h3>
+                                <p>Policy listing and inquiry application. Frontend React JS, Backend PHP Laravel and Database MySQL. Both frontend, backend and database design, the complete solution is developed by my self. </p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <figure class="effect">
+                            <img src="images/beemabazaar.png" alt="image beemabazaar" style="height: 370px;">
+                            <figcaption>
+                                <h3>Beemabazaar</h3>
+                                <p>Policy listing and inquiry application. Frontend React JS, Backend PHP Laravel and Database MySQL. Both frontend, backend and database design, the complete solution is developed by my self. </p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <figure class="effect">
+                            <img src="images/jamalalbahr.png" alt="image jamalalbahr" style="height: 370px;">
+                            <figcaption>
+                                <h3>JAMAL AL BAHR GENERAL TRADING</h3>
+                                <p>Used product listing and delivering application. Frontend React JS and Backend PHP Laravel. Database PostgreSQL, Both frontend, backend and database design, the complete solution is developed by my self. </p>
                             </figcaption>
                         </figure>
                     </div>
